--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,13 +23,86 @@
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <!-- <p id="currentDay" class="lead"></p> -->
     </header>
+
     <div class="container">
+      <!--Add div to show time and date for design purposes-->
+      <div class="row border">
+        <div class="date col-12">
+          <p id="currentDay" class="lead"></p>
+        </div>
+      </div>
       <!-- Timeblocks go here -->
+      <!--8AM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime8" class="hour col-md-1">8 AM</label>
+        <textarea class="col-md-10" id="timeblock-8" type="text" name="timeblock-8"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-9"><i class="fas fa-save"></i></button>
+      </div>
+      <!--9AM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime9" class="hour col-md-1">9 AM</label>
+        <textarea class="col-md-10" id="timeblock-9" type="text" name="timeblock-9"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-9"><i class="fas fa-save"></i></button>
+      </div>
+      <!--10AM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime10" class="hour col-md-1">10 AM</label>
+        <textarea class="col-md-10" id="timeblock-10" type="text" name="timeblock-10"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-10"><i class="fas fa-save"></i></button>
+      </div>
+      <!--11AM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime11" class="hour col-md-1">11 AM</label>
+        <textarea class="col-md-10" id="timeblock-11" type="text" name="timeblock-11"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-11"><i class="fas fa-save"></i></button>
+      </div>
+      <!--12PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime12" class="hour col-md-1">12 PM</label>
+        <textarea class="col-md-10" id="timeblock-12" type="text" name="timeblock-12"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-12"><i class="fas fa-save"></i></button>
+      </div>
+      <!--1PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime13" class="hour col-md-1">1 PM</label>
+        <textarea class="col-md-10" id="timeblock-13" type="text" name="timeblock-13"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-13"><i class="fas fa-save"></i></button>
+      </div>
+      <!--2PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime14" class="hour col-md-1">2 PM</label>
+        <textarea class="col-md-10" id="timeblock-14" type="text" name="timeblock-14"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-14"><i class="fas fa-save"></i></button>
+      </div>
+      <!--3PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime15" class="hour col-md-1">3 PM</label>
+        <textarea class="col-md-10" id="timeblock-15" type="text" name="timeblock-15"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-15"><i class="fas fa-save"></i></button>
+      </div>
+      <!--4PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime16" class="hour col-md-1">4 PM</label>
+        <textarea class="col-md-10" id="timeblock-16" type="text" name="timeblock-16"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-16"><i class="fas fa-save"></i></button>
+      </div>
+      <!--5PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime17" class="hour col-md-1">5 PM</label>
+        <textarea class="col-md-10" id="timeblock-17" type="text" name="timeblock-17"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-17"><i class="fas fa-save"></i></button>
+      </div>
+      <!--5PM Timeblock-->
+      <div class="row time-block">
+        <label for="calTime18" class="hour col-md-1">6 PM</label>
+        <textarea class="col-md-10" id="timeblock-18" type="text" name="timeblock-18"></textarea>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-17"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
