Update HTML and CSS

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,14 +19,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Test</title>
   </head>
 
   <body>
     <header class="jumbotron ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <!-- <p id="currentDay" class="lead"></p> -->
     </header>
 
     <div class="container">
@@ -97,7 +96,7 @@
         <textarea class="col-md-10" id="timeblock-17" type="text" name="timeblock-17"></textarea>
         <button class="btn saveBtn col-12 col-md-1" id="btn-17"><i class="fas fa-save"></i></button>
       </div>
-      <!--5PM Timeblock-->
+      <!--6PM Timeblock-->
       <div class="row time-block">
         <label for="calTime18" class="hour col-md-1">6 PM</label>
         <textarea class="col-md-10" id="timeblock-18" type="text" name="timeblock-18"></textarea>
@@ -107,5 +106,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
