--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,13 +19,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Test</title>
+    <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!-- <p id="currentDay" class="lead"></p> -->
     </header>
 
     <div class="container">
@@ -40,7 +41,7 @@
       <div class="row time-block">
         <label for="calTime8" class="hour col-md-1">8 AM</label>
         <textarea class="col-md-10" id="timeblock-8" type="text" name="timeblock-8"></textarea>
-        <button class="btn saveBtn col-12 col-md-1" id="btn-9"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-8"><i class="fas fa-save"></i></button>
       </div>
       <!--9AM Timeblock-->
       <div class="row time-block">
@@ -96,11 +97,11 @@
         <textarea class="col-md-10" id="timeblock-17" type="text" name="timeblock-17"></textarea>
         <button class="btn saveBtn col-12 col-md-1" id="btn-17"><i class="fas fa-save"></i></button>
       </div>
-      <!--6PM Timeblock-->
+      <!--5PM Timeblock-->
       <div class="row time-block">
         <label for="calTime18" class="hour col-md-1">6 PM</label>
         <textarea class="col-md-10" id="timeblock-18" type="text" name="timeblock-18"></textarea>
-        <button class="btn saveBtn col-12 col-md-1" id="btn-17"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-12 col-md-1" id="btn-18"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
